# ml-zoomcamp-course

./: README.md  pyproject.toml
notebooks/: 01-intro.ipynb  02-ML-for-Regression.ipynb  02-homework.ipynb
notes/: 01-intro-to-ML.md  01-intro.md  readme.md
